--- a/src/pages/HomePage/HomePage.module.css
+++ b/src/pages/HomePage/HomePage.module.css
@@ -5,3 +5,37 @@
   color: black;
 
 }
+
+/* Пример стилей для модального окна */
+.modal {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.5);
+  display: flex;
+  justify-content: center;
+ 
+}
+
+.modalContent {
+  background: white;
+  padding: 50px;
+  border-radius: 8px;
+  text-align: left;
+  background-color: rgb(255, 0, 208);
+
+}
+
+button {
+  margin-top: 10px;
+  padding: 5px 10px;
+  cursor: pointer;
+  background-color: rgb(33, 137, 202);
+ 
+}
+
+.modalName {
+  color: black;
+}
